# stockelper-kg

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run_graphdb.py  sample.env  stock_graph.py  stock_knowledge_graph.py  utils.py
docs/: STREAMING_MODE.md
legacy/: run_graphdb.ipynb  run_graphdb.py  run_with_uv.sh  stock_graph.py  stock_knowledge_graph.py
scripts/: entrypoint.sh  run_with_uv.sh
src/stockelper_kg/: __init__.py  cli.py  config.py
src/stockelper_kg/collectors/: __init__.py  base.py  dart.py  kis.py  krx.py  mongodb.py  orchestrator.py  streaming_orchestrator.py
src/stockelper_kg/graph/: __init__.py  builder.py  client.py  queries.py
src/stockelper_kg/utils/: __init__.py  dates.py  decorators.py
tests/: __init__.py  test_config.py  test_graph_queries.py  test_utils.py
