[project]
name = "stockelper-kg"
version = "0.1.0"
description = "Korean stock domain knowledge graph builder for Neo4j"
authors = [
  { name = "Youngsang Jeong" },
  { name = "Cheonsol Lee" }
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "pandas>=2.0,<3.0",
  "numpy>=1.24,<3.0",
  "requests>=2.31,<3",
  "python-dotenv>=1.0,<2",
  "neo4j>=5.11,<6",
  "OpenDartReader>=0.2.3,<0.3",
  "tqdm>=4.65,<5",
  "pymongo>=4.3,<5",
  "finance-datareader>=0.9.90,<1.0",
]

[project.scripts]
stockelper-kg = "stockelper_kg.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=7.4,<8",
  "pytest-cov>=4.1,<5",
  "black>=23.0,<24",
  "isort>=5.12,<6",
  "flake8>=6.0,<7",
  "mypy>=1.5,<2",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/stockelper_kg --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
